--- a/MAD_prj/app/src/main/AndroidManifest.xml
+++ b/MAD_prj/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,6 +14,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MADPRJ"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".SignupStep4Activity"
+            android:exported="false" />
+        <activity
+            android:name=".SignupStep3Activity"
+            android:exported="false" />
+        <activity
+            android:name=".SignupStep2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".SignupStep1Activity"
+            android:exported="false" />
         <activity
             android:name=".SignupActivity"
             android:exported="false" />
